2007-04-22  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/brush.pdb (brush_rename)
	* tools/pdbgen/pdb/gradient.pdb (gradient_rename)
	* tools/pdbgen/pdb/palette.pdb (palette_rename): don't allow the
	empty string as new name. Fixes bug #431845.

	* app/pdb/brush_cmds.c
	* app/pdb/gradient_cmds.c
	* app/pdb/palette_cmds.c: regenerated.

2007-04-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/dbus-service.xml
	* app/widgets/gimpdbusservice.[ch]: use "uri" instead of "filename"
	in the D-Bus methods.

2007-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: enable word-wrapping in
	the Script-Fu console.

2007-04-19  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): added 'km' (Khmer) (bug #420417).

2007-04-19  Sven Neumann  <sven@gimp.org>

	* configure.in: bump the required version of pygtk to 2.10.4.
	Older versions have a bug in the code generator (bug #381389).

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: don't override LDFLAGS, use AM_LDFLAGS instead.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/gimppluginmanager.[ch]
	* app/plug-in/gimppluginmanager-restore.[ch]: moved
	gimp_plug_in_manager_restore() to its own file.

	* app/core/gimp.c: changed accordingly.

	* app/Makefile.am (LDFLAGS): convince the linker to do its job.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	try to improve readability by moving code to helper functions.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpinterpreterdb.[ch]: added a function that
	returns all file extensions registered in the interpreter db.

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	if the PATHEXT environment variable is set, append all registered
	file extensions to it. This way GIMP can recognize Python scripts
	as plug-ins on platforms where the executable bit is unknown.
